add filters get list notes
