# src/note/controller.js
@@ -1,15 +1,10 @@
 import { createNote, updateOneNote, deleteOne, list } from "./service.js";
-// import User from "../models/user.js"
-// import Note from "../models/note.js"
 
 export async function addNote(req, res) {
   try {
     const userId = req.user.id;
     const { task, startDate, dueDate } = req.body;
     const result = await createNote(task, startDate, dueDate, userId);
-    // const note = new Note({ task, startDate, dueDate, userId });
-    // const createdCar = await note.save();
-    // const user = await User.find().populate("notesUser");
     res.json(result);
   } catch (e) {
     res.status(500).json(e);
@@ -30,7 +25,8 @@ export async function deleteNote(req, res) {
 export async function listNoteUser(req, res) {
   try {
     const userId = req.user.id;
-    const result = await list(userId);
+    const { complited, limit, skip } = req.query;
+    const result = await list(userId, complited, limit, skip);
     res.json(result);
   } catch (e) {
     res.status(500).json(e);
